# muzIQ

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/adr/: 0001-nsynth-midi-curriculum.md  0002-nsynth-metadata-heldout-training.md  0003-boundary-event-decoder-ap-training.md  0004-phase2-onset-sequence-optimization.md  0005-learned-audio-frontend-for-boundary-detection.md
runs/boundary_timing_retrain_20260619/: LAUNCH.md
scripts/: evaluate-boundary-timing-final.sh  evaluate-boundary-timing-sequence.py  evaluate-nsynth-heldout.py  measure-frame-phase-noise.py  prepare.sh  reserve-east5-g4-spot.sh  run-boundary-phase12-clean-noisy-notes480.sh  train-boundary-timing.sh  train.sh  web-detached.sh
src/muziq_nn/: __init__.py
src/muziq_nn/datasets/: __init__.py  midi.py  nsynth.py  prepare.py  render.py  schema.py
src/muziq_nn/metrics/: __init__.py  source_tracking.py
src/muziq_nn/models/: __init__.py  attention.py  frontend.py
src/muziq_nn/training/: __init__.py  train.py
src/muziq_nn/webapp/: __init__.py  app.py  inference.py
src/muziq_nn/webapp/static/: app.js  index.html  styles.css
tests/: conftest.py  test_attention_loss.py  test_audio_frame_extractor.py  test_boundary_timing_sequence_eval.py  test_heldout_eval.py  test_leaf_frontend.py  test_midi_parser.py  test_nsynth_cache.py  test_renderer.py  test_train_smoke.py  test_web_inference.py
